Then start a REPL in Counterclockwise as usual, e.g. from the project's node or some clojure file.

Then invoke piggieback to start a Clojurescript REPL. Here's an example with a Rhino REPL:

[source,clojure]
----
(cemerick.piggieback/cljs-repl (cljs.repl.rhino/repl-env))
----

The REPL is now a Clojurescript REPL. You now get code completion and documentation from the Clojurescript environment.


=== Counterclockwise embedded nREPL

Counterclockwise ships with an embedded nREPL server. The following enhancements have been applied:

- Command line options: `-Dccw.nrepl.port=[1-65535]` allows to select the embedded nrepl port. `ccw.autostartrepl` has been renamed to `ccw.nrepl.autostart` for coherence.
-- Uses the cider-nrepl middleware instead of the bare default middleware.

=== REPL View
- If the REPL requires an input from the user, no blocking (modal) popup is used anymore. Instead, the Input Area is refocused to send its next content to *in* via the appropriate nREPL op.

=== User Plugins

- The keybinding cleaning function did concurrent modifications of an Eclipse Internal collection. Fix laurentpetit/ccw-plugin-manager#1

== Changes between Counterclockwise 0.31.2 and 0.32.0

`0.32.0` released on December xx, 2014

Internal Refactoring: merge of the Eclipse 4 code into the main Counterclockwise Plugin.

From now on, Counterclockwise drops Eclipse 3.x support, and only supports Eclipse 4.

Internally, Counterclockwise now uses Clojure 1.7.0-master. It adds a couple patches to it, waiting for the relevant JIRA tickets to be applied mainstream.

=== Fix

- New Clojure Project Wizard honors the 'use previous location' checkbox. Fixes #682
- Better support for clojure extension files: `cljs`, `cljx`, `clja`, `cljc`

=== Documentation
- Add a mention about keyboard binding for switching between default and strict editing modes ( kbd:[Alt+D] ). Fixes #346


=== Leiningen Support
- Embedded Leiningen version upgraded from version 2.5.0 to 2.5.1


=== Enhancements
